appId: com.anonymous.src
---
# Launch the app
- launchApp

# Wait for "Campus Map" to appear before tapping
- extendedWaitUntil:
    visible: { text: "Campus Map" }
    timeout: 20000 # Wait up to 10 seconds

# Tap the Campus Map tab
- tapOn: "Campus Map"
# Verify that the map is displayed by checking the MapView element.
- assertVisible:
    id: "map-view"

# - assertVisible:
#     id: "campus-label"

# Interact with the map: simulate panning (these swipe directions can be adjusted)
- swipe: { direction: "left", percent: 0.3 }
- swipe: { direction: "right", percent: 0.3 }
- swipe: { direction: "up", percent: 0.6 }
# Step 4: Zoom In - tap the plus button
- doubleTapOn:
    point: 1000,1930

- swipe: { direction: "down", percent: 0.6 }

# Step 4: Zoom Out - tap the minus button
- doubleTapOn:
    point: 1000,2020

# Simulate refreshing the map data by tapping "My Location"
- tapOn: "My Location"

# Verify that the user's location marker appears, indicating that the map updated
- assertVisible: "Your Location"

# Toogle between Campuses
- tapOn: { id: "campus-switch" }
- assertVisible: { text: "Loyola Campus" }
- tapOn: { id: "campus-switch" }
- assertVisible: { text: "SGW Campus" }
# # Tap a building marker (replace "building-marker-H" with a valid testID)
# - tapOn: { id: "building-marker-67aaabc9a89802f0176bad83" }

# # Verify that the building information appears
# - assertVisible:
#     id: "building-info"
